server/static/base.less
/* ... */
#status {
  &.error {
    color: red;
  }
}

.as-pointer {
  cursor: pointer;
}

.verb-link {
  &:hover {
    color: @orange;
    text-decoration: underline;
  }
}

.axis {
  background: #777;
  height: 200%;
  position: absolute;
  transform: translate(0, -50%);
  width: 1px;
  &.horizontal {
    height: 1px;
    transform: translate(-50%, 0);
    width: 200%;
  }
}

//*************
// Toplevel
//*************
.toplevel {
  display: flex;
  flex-direction: column;
  width: max-content;
  min-width: 245px;
  padding: 4px;
  border: @top-border;

  &.selected {
    background-color: @selected-background;
    outline: 0.4px darken(magenta, 25%) dotted;
  }

  .mouseovered {
    background-color: @grey1;
    &.blank {
      color: @grey3;
    }
  }

  .selected {
    outline: 0.5px magenta solid;
  }

  .blank {
    min-width: 8ch;
    .blank-box-style;
    .blank-text-style;
  }

  .view-data {
    bottom: 100%;
    left: 0px;
    position: absolute;
    width: 100%;
    &.live-view-selection-active {
      bottom: calc(~"100% + 22px");
    }
    ul.request-cursor {
      bottom: 1em;
      float: left;
      list-style-type: none;
      max-height: calc(~"1.5em + 1px");
      overflow: hidden;
      width: 100%;
      li {
        float: left;
        &.mouseovered {
          color: orange;
          &:before {
            background-color: @grey1;
            bottom: calc(~"-100% + 3.5em");
            content: attr(data-content);
            display: block;
            font-size: 0.7em;
            left: 0;
            // max-height: 6em;
            max-width: 100%;
            overflow: auto;
            position: absolute;
            width: auto;
            word-wrap: break-word;
            white-space: pre;
          }
        }
        &.active {
          border-bottom: 1px solid orange;
        }
      }
    }
  }
}

//*************
// Routing table
//*************
.viewing-table {
  background-color: @black2;
  border: 2px solid @blue;
  padding: 8px;
  position: relative;
  width: max-content;
  z-index: 20;

  .header {
    width: 300px;
    color: @orange;
    padding-bottom: 8px;
    margin-bottom: 8px;
    border-bottom: 2px @white3 solid;

    .title {
      margin-right: 5px;
    }
    .count {
      font-weight: bold;
    }
  }

  .fofs {
    .fof {
      display: flex;
      flex-direction: row;
      justify-content: space-between;

      .path {
        color: @white3;
      }

      .modifier {
        color: @grey2;
      }
    }
  }

  .http-routes {
    .routes {
      padding-bottom: 8px;
      margin-bottom: 8px;
      border-bottom: 2px @purple solid;
    }

    .handler {
      display: flex;
      flex-direction: row;
      justify-content: space-between;

      .url{
        color: @white3;
        .prefix {
          color: @grey2;
        }
      }

      .external {
        color: @orange;
      }

      .verbs {
        color: @grey2;
      }
    }
  }
}

//*************
// DB
//*************
.db {
  margin: 10px;
  display: flex;
  flex-direction: column;

  .fa-lock, .fa-unlock {
    position: fixed;
    margin-left: -20px;
    margin-top: -22px;
    &.fa-lock {
      color: @red;
    }
    &.fa-unlock {
      color: @green;
    }
  }


  .dbname {
    background-image: url('/static/_db.png');
    background-position: left center;
    background-repeat: no-repeat;
    padding-left: 20px; /* Adjust according to image size to push text across. */
    margin-bottom: 10px;
    margin: 0 auto; /* center the db name */
    &::before {
      content: "DB: ";
      font-weight: bold;
      font-size: 110%;
    }
  }

  .col {
    display: flex;
    flex-direction: row;
    text-align: center;

    .name, .type {
      flex: 1;
      &.blank {
        width: 96; // put it all on one line
      }
    }

  }
}

.user-fn {
  margin: 10px;
  display: flex;
  flex-direction: column;
  border-bottom: 1px solid @orange;
  padding-bottom: 10px;

  .ufn-name {
    padding-bottom: 10px;
    margin: 0 auto;
  }

  .col {
    display: flex;
    flex-direction: row;
    text-align: center;

    .name, .type {
      flex: 1;
      &.blank {
        width: 96; // put it all on one line
      }
    }

  }
}


//*************
// Handler
//*************

.toplevel .spec-header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  flex-wrap: wrap;

  color: @orange;
  font-size: 8pt;

  border-bottom: 1px solid @orange;
  padding-bottom: 4px;

  .name, .modifier, .module {
    margin: 0 4px;
  }

  // remove dotted outline after clicking (source: reset-normalize)
  a:focus {
    outline: none;
  }
  .external {
    padding-right: 1ch;
    color: @orange;
    vertical-align: center;
  }
}




//*************
// AST macros
//*************
.indent() {
  margin-left: 16px;
}

.string-style() {
    color: @purple;
    font-style: italic;
}

.blank-box-style() {
  height: 15px;
  border-bottom: @blank-underline;
}
.blank-text-style() {
  color: @grey2;
  font-style: italic;
  font-size: 8pt;
  text-align: center;
  padding-left: 1ch;
  padding-right: 1ch;
  margin-left: 4px;
  margin-right: 4px;
}

.layout-block() {
  display: block;
}

.layout-inline() {
  display: inline-block;
}

.highlighted-indent() {
  margin-left: 8px;
  padding-left: 8px;
  border-left: 1px solid @orange;
}
/* ... */

